[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn[standard]>=0.38.0",
    "sqlmodel>=0.0.22",
    "SQLAlchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",           
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "email-validator>=2.1.0",
    "passlib>=1.7.4",
    "bcrypt>=4.2.0",
    "PyJWT>=2.8.0",
    "httpx>=0.27.0",
    "Jinja2>=3.1.4",
    "python-slugify>=8.0.4",
    "rich>=13.7.0",
    "watchfiles>=0.21.0",
    "uvloop>=0.19.0",
    "websockets>=12.0",

]
